--- a/dokumendid/p6hikiri_2016-10-27.md
+++ b/dokumendid/p6hikiri_2016-10-27.md
@@ -1,9 +1,9 @@
-  **Üldsätted**
+..**Üldsätted**
 
 1. Mittetulundusühing nimega MTÜ Open Knowledge Estonia (lühendatult OK-EE) on avalikes huvides tegutsev juriidiliste ja füüsiliste isikute vabatahtlik ühendus, mis asub Tallinnas.
 2. Ühingu põhieesmärk on tagada info vaba kättesaadavus kõigis ühiskonna kihtides, nii era- kui avalikus sektoris, ning aidata sellega kaasa avatud teadmusühiskonna arengule. Ühing seisab oma liikmete ühiste huvide eest avatud teadmuse edendamisel, koondab huvitatud kogukondi ja nende kogemust, aitab ellu viia algatusi ja projekte, kaasab vajadusel avalikkust — ning juurutab andmete kasutamise, jagamise ja väärindamise viise, mis loovad jätkusuutlikku raamistikku innovatsiooniks ja ettevõtluseks valdkondades andmeteadusest loomemajanduseni ning toetavad avatud valitsemise eesmärkide saavutamist riigi ja omavalitsuse tasemel.
 
-  **Liikmelisus**
+..**Liikmelisus**
 
 4. Ühingu liikmeks vastuvõtmist võib taotleda eraisik või juriidiline isik. Juriidiline isik vormistatakse vastuvõtmisel ühingu toetajaliikmeks.
 5. Ühingu liikmeks astumiseks esitatakse juhatusele ettenähtud vormis avaldus ja muud nõutavad dokumendid. Liikmeks vastuvõtmise otsustab juhatus hiljemalt kuu aja jooksul või avaldaja mittenõustumisel juhatuse keelduva otsusega järgmisel üldkoosolekul.
