--- a/dokumendid/p6hikiri_2016-10-27.md
+++ b/dokumendid/p6hikiri_2016-10-27.md
@@ -1,4 +1,4 @@
-c **Üldsätted**
+ **Üldsätted**
 
 1. Mittetulundusühing nimega MTÜ Open Knowledge Estonia (lühendatult OK-EE) on avalikes huvides tegutsev juriidiliste ja füüsiliste isikute vabatahtlik ühendus, mis asub Tallinnas.
 2. Ühingu põhieesmärk on tagada info vaba kättesaadavus kõigis ühiskonna kihtides, nii era- kui avalikus sektoris, ning aidata sellega kaasa avatud teadmusühiskonna arengule. Ühing seisab oma liikmete ühiste huvide eest avatud teadmuse edendamisel, koondab huvitatud kogukondi ja nende kogemust, aitab ellu viia algatusi ja projekte, kaasab vajadusel avalikkust — ning juurutab andmete kasutamise, jagamise ja väärindamise viise, mis loovad jätkusuutlikku raamistikku innovatsiooniks ja ettevõtluseks valdkondades andmeteadusest loomemajanduseni ning toetavad avatud valitsemise eesmärkide saavutamist riigi ja omavalitsuse tasemel.
@@ -25,7 +25,7 @@ c **Üldsätted**
 18. Nõukogu kinnitab enda töökorralduse ning valib endi seast esimehe. Nõukogu koosolekute kokkukutsumisele ja läbiviimisele ei kohaldata üldkoosoleku kohta sätestatut.
 19. Ühingut juhib ja esindab igapäevaselt 1-5 liikmest koosnev juhatus, kelle valib nõukogu kuni kolmeks aastaks. Juhatuse liikmete tasustamise kord ja nendega lepingute sõlmimine on nõukogu pädevuses.
 
- **Lõppsätted**c 
+ **Lõppsätted**
 
 20. Kõigis olukordades, mida pole põhikirjaga ette nähtud, kohaldatakse seaduses sätestatut.
 21. Ühingu ühinemine, jagunemine ja likvideerimine toimuvad seaduses ettenähtud korras.
